<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Skolrank - Sverige</string>
    <string name="search_hint">Filtrera</string>
    <string name="title_activity_main">Skolrank - Sverige</string>
    <string name="sorting_on">Sorterar på:</string>
    <string name="map_symbol_shows">Kartsymbol visar:</string>
    <string-array name="sort_options">
        <item>@string/avg_grade</item>
        <item>@string/num_students</item>
        <item>@string/school_name</item>
        <item>@string/qualified_students</item>
        <item>@string/educated_parents</item>
        <item>@string/girls</item>
        <item>@string/foreign_parents</item>
    </string-array>

    <string name="unit_num_students">st</string>

    <string name="year_dialog_title">Välj läsår</string>
    <string-array name="year_dialog_options">
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>

    </string-array>


    <!-- Select schooltype dialog -->
    <string name="school_type_toast">Visar</string>
    <string name="school_type_gymnasie">Gymnasieskolor</string>
    <string name="school_type_grund">Grundskolor</string>
    <string name="school_type_dialog_title">Välj skoltyp</string>
    <string-array name="school_type_options">
        <item>@string/school_type_grund</item>
        <item>@string/school_type_gymnasie</item>
    </string-array>


    <string name="school_name">Skolnamn</string>
    <string name="qualified_students">Godkända</string>
    <string name="avg_grade">Betyg</string>
    <string name="foreign_parents">Utländsk bakgrund</string>
    <string name="educated_parents">Föräldrar med eftergymnasial utbildning</string>
    <string name="num_students">Antal</string>
    <string name="girls">Andel flickor</string>

    <string name="ok">OK</string>
    <string name="cancel">Avbryt</string>

    <string name="dialog_about">Om Skolrank - Sverige</string>

    <!-- menu -->
    <string name="action_licenses">Licenser</string>
    <string name="action_about">Om Skolrank</string>
    <string name="action_school_list">Lista</string>
    <string name="action_map">Karta</string>
    <string name="action_sort_schools">Sortera</string>
    <string name="action_school_type">Gymnasie/Grund</string>
    <string name="action_year_dialog">Läsår</string>
    <string name="action_show_map">Karta</string>
    <string name="action_show_list">Lista</string>
    <string name="action_settings">Settings</string>

    <string name="search_title">Kommun</string>
    <string name="title_activity_grund_skola">GrundSkolaActivity</string>
    <string name="open_in_browser">Öppna i webläsaren</string>


    <string name="status_bar">%1$s [%2$d]</string>
    <string name="status_bar_count">%1$d st</string>
    <string name="map_helper_detailed_markers">Vid tillräcklig zoom, visas en markör per skola. De olika färgerna har nedan betydelse.</string>
    <string name="map_helper_clusters">Om flera skolor ligger nära varandra gruperas dessa. I menyn längst upp väljs vad cirkeln representerar. Nedan cirkel skulle kunna betyda att 55%% av elevernas föräldrar har eftergymnasial utbildning</string>
    <string name="map_helper_cluster_number">55</string>
</resources>
