<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">
    <RelativeLayout
        android:id="@+id/list_image_frame"
        style="@style/details_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/school_type_image"
            android:layout_width="32dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_shield_fri_36"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <TextView
        android:id="@+id/list_item_school_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/list_image_frame"
        android:layout_toRightOf="@+id/list_image_frame"
        android:ellipsize="end"
        tools:text="Enskilda gymnasiet"
        android:textSize="@dimen/list_item_large"
        android:textStyle="bold"
        android:maxLines="1" />

    <TableLayout
        android:id="@+id/data_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_item_school_name"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/list_image_frame"
        android:stretchColumns="*">

        <TableRow tools:ignore="UselessParent">

            <TextView
                android:id="@+id/numStudents"
                style="@style/table_text"
                android:textColor="@color/skolrank_yellow"
                tools:text="1200" />

            <TextView
                android:id="@+id/foreign_parents"
                style="@style/table_text"
                android:textColor="@color/skolrank_red"
                tools:text="87%" />


            <TextView
                android:id="@+id/educated_parents"
                style="@style/table_text"
                android:textColor="@color/skolrank_blue"
                tools:text="87%" />


            <TextView
                android:id="@+id/andel_flickor"

                style="@style/table_text"
                android:textColor="@color/skolrank_pink"
                tools:text="87%"
                />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/programs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_image_frame"
        android:orientation="vertical"
        android:shrinkColumns="0"
        android:stretchColumns="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <View />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/avg_grade"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/qualified_students"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/num_students"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </TableRow>
        <!--       <include
                   android:id="@+id/program1"
                   layout="@layout/list_item_gymnasie_program"

                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

               <include
                   layout="@layout/list_item_gymnasie_program"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/program1" />-->
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/programs"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/kommun_namn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Allingsås"
            android:textColor="@color/text_lighter"
            android:textSize="@dimen/list_item_small" />
    </LinearLayout>
</RelativeLayout>